Setting up the router

--- a/globomatics-ui/src/app/components/admin/admin.component.html
+++ b/globomatics-ui/src/app/components/admin/admin.component.html
@@ -6,7 +6,7 @@
         <th>Model</th>
         <th class="text-right">Purchase Price</th>
       </tr>
-      <tr *ngFor="let bike of bikes">
+      <tr *ngFor="let bike of globomatics">
         <td>
           {{bike.name}}
         </td>
