--- a/globomatics-ui/src/app/components/admin/admin.component.html
+++ b/globomatics-ui/src/app/components/admin/admin.component.html
@@ -8,7 +8,7 @@
       </tr>
       <tr *ngFor="let bike of globomatics">
         <td>
-          {{bike.name}}
+          <a [routerLink]="['/admin/view', bike.id]">{{bike.name}}</a>
         </td>
         <td>
           {{bike.email}}
